changed style errorInput

--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -12,8 +12,8 @@
 
 .errorInput {
     composes: superInput;
-    border: 3px solid lime;
-    background: red;
+    border: 3px solid #f9133e;
+    background: #e0c9f5;
 }
 
 .error {
