--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,6 +1,8 @@
 .superInput {
+    width: 200px;
     height: 30px;
     padding-left: 10px;
+    padding-right: 10px;
     margin: 8px 0;
     box-sizing: border-box;
     border: none;
