added style for superRadio

--- a/src/p2-homeworks/h7/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/p2-homeworks/h7/common/c5-SuperSelect/SuperSelect.module.css
@@ -3,7 +3,7 @@
     font-size: 16px;
     font-family: sans-serif;
     font-weight: 700;
-    color: #444;
+    color: #25142E;
     line-height: 1.3;
     padding: .6em 1.4em .5em .8em; width: 100%;
     max-width: 25%;
