--- a/src/p2-homeworks/h7/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/p2-homeworks/h7/common/c5-SuperSelect/SuperSelect.module.css
@@ -5,12 +5,13 @@
     font-weight: 700;
     color: #25142E;
     line-height: 1.3;
-    padding: .6em 1.4em .5em .8em; width: 100%;
+    padding: .6em 1.4em .5em .8em;
+    width: 100%;
     max-width: 25%;
     box-sizing: border-box;
     margin: 0;
     border: 1px solid #863cf6;
-    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, .04);
     border-radius: .5em;
     -moz-appearance: none;
     -webkit-appearance: none;
@@ -21,14 +22,20 @@
     background-position: right .7em top 50%, 0 0;
     background-size: .65em auto, 100%;
 }
-.select-css::-ms-expand { display: none; }
+
+.select-css::-ms-expand {
+    display: none;
+}
+
 /*.select-css:hover { border-color: #888; }*/
-.select-css:focus { border-color: #aaa;
+.select-css:focus {
+    border-color: #aaa;
     box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
     box-shadow: 0 0 0 3px -moz-mac-focusring;
     color: #222;
     outline: none;
 }
+
 /*
 .select-css option { font-weight:normal; }
 *[dir="rtl"] .select-css, :root:lang(ar) .select-css, :root:lang(iw) .select-css {
